--- a/src/app/service/service.page.html
+++ b/src/app/service/service.page.html
@@ -1,17 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      About
-    </ion-title>
+    <ion-title>Service</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">About</ion-title>
+      <ion-title size="large">Service</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="About page"></app-explore-container>
 </ion-content>
